SERVER-8828: replace verify() with assert() in spidermonkey startup tests